# DAPDFAEPUB

./: .gitignore  LICENSE  README.md  pyproject.toml
.Jules/: palette.md
.github/workflows/: build-windows.yml  tests.yml
docs/: BUILD.md  CI.md  INSTALL_WINDOWS.md
docs/superpowers/plans/: 2026-07-07-model-download-ui.md
docs/superpowers/specs/: 2026-07-07-model-download-ui-design.md
scripts/: convert_one.py  download_model.py  launch_ui.py
src/relictoepub/: __init__.py  ingest.py  pipeline.py
src/relictoepub/compile/: __init__.py  build_epub.py  eink_css.py
src/relictoepub/inference/: __init__.py  config.py  unlimited_ocr.py
src/relictoepub/postprocess/: __init__.py  bbox_crop.py  text_clean.py  webp_optim.py
src/relictoepub/ui/: __init__.py  components.py  gradio_app.py
tests/: __init__.py  conftest.py  test_compile.py  test_inference.py  test_inference_streaming.py  test_ingest.py  test_model_status.py  test_pipeline.py  test_postprocess.py
