[project]
name = "relictoepub"
version = "0.1.0"
description = "PDF → EPUB3 conversion pipeline powered by Baidu Unlimited-OCR (R-SWA)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "RelicToEpub contributors" },
]

dependencies = [
  # PDF rendering & basic image processing
  "PyMuPDF>=1.24,<2.0",
  "Pillow>=10.0,<12.0",
  # ML stack — Unlimited-OCR via HuggingFace Transformers
  # Pin transformers family together to avoid version drift
  "transformers>=4.45.0,<5.0.0",
  "accelerate>=0.33.0,<2.0.0",
  "bitsandbytes>=0.43.0,<0.45.0",
  # torch is intentionally unconstrained here — install the CUDA build matching
  # your GPU separately (e.g. `uv pip install torch --index-url ...`). See README.
  # EPUB assembly
  "pypandoc>=1.13,<2.0",
  "EbookLib>=0.18,<0.19",
  # Gradio UI
  "gradio>=5.0.0,<6.0.0",
  # Added dependencies
  "addict>=2.4.0,<3.0.0",
  "matplotlib>=3.8.0,<4.0.0",
  "torchvision>=0.18.0,<0.23.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
  "pytest-mock>=3.12,<4.0",
  "ruff>=0.6.0,<1.0.0",
]
cpu = [
  # Pure-CPU torch build (no CUDA). Use on systems without NVIDIA GPU.
  "torch>=2.3.0,<3.0.0",
]
cuda118 = [
  # CUDA 11.8 build — last reliable wheel for Pascal GPUs (GTX 1080 Ti, SM 6.1)
  "torch>=2.3.0,<3.0.0",
]
cuda124 = [
  # CUDA 12.4 build — for Ampere / Hopper / modern GPUs
  "torch>=2.3.0,<3.0.0",
]

[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/relictoepub"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
  "slow: marks tests as slow (require the Unlimited-OCR model)",
  "gpu: marks tests that require a CUDA-capable GPU",
]
